BPER/DEVF/force-app/main/default/objects/Delega__c/Delega__c.object-meta.xml
<CustomObject>
    <label>Delega</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Delega Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delega</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>