BPER/DEVF/force-app/main/default/objects/Delega__c/fields/Delegante__c.field-meta.xml
<CustomField>
    <fullName>Delegante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegante</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deleghe</relationshipName>
    <type>Lookup</type>
</CustomField>