BPER/DEVF/force-app/main/default/objects/Delega__c/fields/Delegato__c.field-meta.xml
<CustomField>
    <fullName>Delegato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegato</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(((3 AND 4) OR (2 AND 5 AND 6) OR (1 AND 2)) OR 8 OR (1 AND 2 AND 9 AND 10)) AND 7</booleanFilter>
        <filterItems>
            <field>User.idced__c</field>
            <operation>equals</operation>
            <valueField>$User.idced__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.abi__c</field>
            <operation>equals</operation>
            <valueField>$User.abi__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Profilo__c</field>
            <operation>equals</operation>
            <value>NEC_D.0</value>
        </filterItems>
        <filterItems>
            <field>User.abi__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$User.Profilo__c</field>
            <operation>equals</operation>
            <value>NEC_D.2</value>
        </filterItems>
        <filterItems>
            <field>$User.idced__c</field>
            <operation>equals</operation>
            <value>6928</value>
        </filterItems>
        <filterItems>
            <field>$User.Profilo__c</field>
            <operation>notEqual</operation>
            <valueField>User.Profilo__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$User.Profilo__c</field>
            <operation>equals</operation>
            <value>NEC_A.1</value>
        </filterItems>
        <filterItems>
            <field>User.Profilo__c</field>
            <operation>equals</operation>
            <value>NEC_A.2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Deleganti</relationshipName>
    <type>Lookup</type>
</CustomField>