BPER/DEVF/force-app/main/default/objects/Delega__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Fine</label>
    <type>Date</type>
</CustomField>