BPER/DEVF/force-app/main/default/objects/Delega__c/fields/GiorniPassati__c.field-meta.xml
<CustomField>
    <fullName>GiorniPassati__c</fullName>
    <formula>TODAY() - StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giorni Passati</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>