BPER/DEVF/force-app/main/default/objects/Delega__c/fields/Scaduto__c.field-meta.xml
<CustomField>
    <fullName>Scaduto__c</fullName>
    <formula>(TODAY() - StartDate__c) &gt; 30 || Today() &gt; EndDate__c || Cancelled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scaduto</label>
    <type>Checkbox</type>
</CustomField>