BPER/DEVF/force-app/main/default/objects/Delega__c/fields/ScadutoDa__c.field-meta.xml
<CustomField>
    <fullName>ScadutoDa__c</fullName>
    <formula>IF(EndDate__c != null, Today() - EndDate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scaduto da</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>