BPER/DEVF/force-app/main/default/objects/Delega__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Inizio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>