BPER/DEVF/force-app/main/default/objects/Delega__c/validationRules/EndDate_is_before_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_is_before_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
    <errorMessage>La data di fine validità non può essere antecedente a quella di inizio.</errorMessage>
</ValidationRule>