BPER/DEVF/force-app/main/default/objects/Delega__c/validationRules/Same_Delegato_Delegante.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Delegato_Delegante</fullName>
    <active>true</active>
    <errorConditionFormula>Delegante__c  = Delegato__c</errorConditionFormula>
    <errorMessage>Delegante e delegato non possono essere lo stesso utente.</errorMessage>
</ValidationRule>