BPER/DEVF/force-app/main/default/objects/Delega__c/validationRules/StartDate_is_today_or_after.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_is_today_or_after</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; StartDate__c &lt; Today()</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>La Data d&apos;inizio non può essere antecedente ad oggi</errorMessage>
</ValidationRule>