BPER/DEVF/force-app/main/default/objects/Delega__c/listViews/Tutte_le_Deleghe.listView-meta.xml
<ListView>
    <fullName>Tutte_le_Deleghe</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Delegante__c</columns>
    <columns>Delegato__c</columns>
    <columns>GiorniPassati__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutte le Deleghe</label>
</ListView>